[Security] -> Keycloak - zależności, properties

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,3 +8,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+  keycloak:
+    auth-server-url: 'http://localhost:8180/auth'
+    ralm: 'Veto'
+    resource: 'veto-client'
+    public-client: true
